tests/testcases/invalid/semantic/98_increment_cast_result.ciel
// Error: cannot increment cast result (rvalue)
int main() {
    float f = 3.14;

    // Error: cast expression is rvalue
    (int)f++;

    return 0;
}
